<resources>
    <string name="app_name">WeekPlanning</string>

    <!-- CONSTANTS -->
        <!-- Type of meals -->
        <string name="constant_breakfast" translatable="false">breakfast</string>
        <string name="constant_lunch" translatable="false">lunch</string>
        <string name="constant_dinner" translatable="false">dinner</string>
        <!-- Keywords for meals' subcategories -->
        <string name="constant_before" translatable="false">before</string>
        <string name="constant_first" translatable="false">first</string>
        <string name="constant_second" translatable="false">second</string>
        <string name="constant_after" translatable="false">after</string>
        <!-- Intent extra fields to breakfast/lunch/dinner -->
        <string name="constant_intent_dateString" translatable="false">dateString</string>
        <string name="constant_intent_calendarId" translatable="false">calendarId</string>
        <string name="constant_intent_lunchOrDinner" translatable="false">lunchOrDinner</string>
        <!-- Start new activity codes -->
        <string name="constant_start_activity_code_breakfast" translatable="false">1</string>
        <string name="constant_start_activity_code_lunchDinner" translatable="false">2</string>
        <string name="constant_start_activity_code_googleCalPerm" translatable="false">222</string>
        <string name="constant_start_activity_code_takePicture" translatable="false">11</string>
        <!-- Permissions codes -->
        <string name="constant_permission_code_camera" translatable="false">10</string>
        <string name="constant_permission_code_readWriteStorage" translatable="false">5</string>

    <!-- Menu items -->
    <string name="logout">LOGOUT</string>

    <!-- Error messages -->
    <string name="error_title">Something went wrong...</string>
    <string name="login_error_fields">All fields must be filled!</string>
    <string name="login_error_auth">Couldn\'t login into the account</string>
    <string name="insert_empty_item">The field cannot be empty!</string>
    <string name="error_time_not_selected_title">Time not selected</string>
    <string name="error_time_not_selected_message">You have to choose the time for your meal.</string>
    <string name="error_timestart_less_than_timeend_title">Wrong time selected</string>
    <string name="error_timestart_less_than_timeend_message">
        The start time must be less than the end time
    </string>
    <string name="error_unable_retrieve_permissions">
        Unable to retrieve permissions
    </string>
    <string name="error_google_play_services_unavailable_title">Cannot use the app</string>
    <string name="error_google_play_services_unavailable_message">
        This app needs Google Play Services to works.
    </string>
    <string name="error_no_network_title">No network signal</string>
    <string name="error_no_network_message">
        Activate your network to use this app.
    </string>
    <string name="error_cannot_take_picture">You can\'t take pictures</string>
    <string name="error_cannot_save_picture">You can\'t save pictures</string>
    <string name="error_time_event_end_near_title">Time end meal near</string>
    <string name="error_time_event_end_near_message">
        You need at least 20 minutes to eat your meal!
    </string>
    <string name="error_file_not_created">File not created</string>
    <string name="ok" translatable="false">OK</string>

    <!-- Success messages -->
    <string name="login_success">You\'re logged in</string>
    <string name="login_welcome">Welcome to</string>
    <string name="whyGoogleLogin">
        WeekPlanning synchronizes the app with your Google Calendar.\n\n
        In order to do so, we need you to sign in with your Google account
    </string>
    <string name="success_can_take_picture">Now you can take pictures!</string>

    <!-- Warning messages -->
    <string name="warning_permission_calendar_title">Permissions required</string>
    <string name="warning_permission_calendar_message">
        This app won\'t work without this permission.
    </string>
    <string name="warning_logout_title">Sign out</string>
    <string name="warning_logout_message">Do you really wanna sign out?</string>
    <string name="warning_remove_list_item_element_title">Remove element</string>
    <string name="warning_remove_list_item_element_message">Do you really wanna remove this element?</string>
    <string name="warning_remove_list_item_element_last">
        If you remove this element, your meal will be removed, too.
        \nDo you want to proceed?
    </string>
    <string name="warning_delete_card_meal_immediatly_title">
        Delete the meal
    </string>
    <string name="warning_delete_card_meal_immediatly_message">
        Do you really wanna delete this meal?
    </string>
    <string name="warning_on_back_button_changes_title">Changes made</string>
    <string name="warning_on_back_button_changes_message">
        Some changes were made.
        \nDo you really wanna go back?
    </string>
    <string name="warning_delete_image_title">Delete image</string>
    <string name="warning_delete_image_message">
        Do you really wanna delete this image?
    </string>

    <!-- Buttons -->
    <string name="button_add_breakfast">Add breakfast</string>
    <string name="button_add_lunch">Add lunch</string>
    <string name="button_add_dinner">Add dinner</string>
    <string name="button_add_item_meal">Add</string>
    <string name="button_time_picker_start">Time start</string>
    <string name="button_time_picker_end">Time end</string>
    <string name="button_take_picture">Take picture</string>
    <string name="button_delete_meal">Delete meal</string>
    <string name="button_done">Done</string>
    <string name="button_negate">Negate</string>
    <string name="button_allow">Allow</string>
    <string name="button_yes">Yes</string>
    <string name="button_no" translatable="false">No</string>

    <!-- Google Calendar API -->
    <string name="google_calendar_description">
        Google Calendar created by WeekPlanning app
        to store info about the meals that the user's gonna eat.
    </string>

    <!-- Meals sections -->
    <string name="section_meal_breakfast">Breakfast</string>
    <string name="section_meal_lunch">Lunch</string>
    <string name="section_meal_dinner">Dinner</string>

    <!-- Lunch and Dinner subcategories -->
    <string name="meal_subcategory_starter">- Starter</string>
    <string name="meal_subcategory_first">- First course</string>
    <string name="meal_subcategory_second">- Second course</string>
    <string name="meal_subcategory_end">- End of meal</string>

    <!-- LogIn / SignUp -->
    <string name="login_button_text">SIGN IN</string>

    <!-- MainActivity -->
    <string name="mainactivity_click_calendar">You\'ve clicked on the day</string>
    <string name="mainactivity_add_breakfast">Add breakfast</string>
    <string name="mainactivity_add_lunch">Add lunch</string>
    <string name="mainactivity_add_dinner">Add dinner</string>

    <!-- Breakfast -->
    <string name="insert_item_breakfast">Insert meal...</string>
    <string name="add_item_breakfast">Add</string>
    <string name="no_more_items_title">Don\'t eat too much...</string>
    <string name="no_more_items_message">Max 10 elements allowed</string>

    <!-- LunchDinner -->
    <string-array name="dropdown_part_meal">
        <item>Starter</item>
        <item>First course</item>
        <item>Second course</item>
        <item>End of meal</item>
    </string-array>
    <string name="before">STARTER</string>
    <string name="first">FIRST COURSE</string>
    <string name="second">SECOND COURSE</string>
    <string name="after">END OF MEAL</string>
    <string name="dropdown_label">Type of course</string>

</resources>
