<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/insert_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:fontFamily="@font/montserrat"
            android:hint="@string/insert_item_breakfast" />

        <Button
            android:id="@+id/add_item_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_add_item_meal"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_food_items_meal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp" />

    <ImageView
        android:id="@+id/preview_image_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="260dp"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/time_picker_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_time_picker_start"
            android:textAllCaps="false"
            android:textColor="@color/customButton"
            android:textSize="22dp" />

        <Button
            android:id="@+id/time_picker_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_time_picker_end"
            android:textAllCaps="false"
            android:textColor="@color/customButton"
            android:textSize="22dp" />
    </LinearLayout>

    <Button
        android:id="@+id/take_picture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/button_take_picture"
        android:textAllCaps="false"
        android:textColor="@color/customButton"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/delete_button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_delete_meal"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/done_button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_done"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>