<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddLunchDinner">

        <include
            android:id="@+id/custom_toolbar"
            layout="@layout/toolbar" />

        <Spinner
            android:id="@+id/dropdown_subcategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dp"
            android:entries="@array/dropdown_part_meal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/dinner_lunch_insert_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:fontFamily="@font/montserrat"
                android:hint="@string/insert_item_breakfast" />

            <Button
                android:id="@+id/add_item_dinner_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/colorAddButton"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/button_add_item_meal"
                android:textAllCaps="false"
                android:textColor="@color/textColorCustomButton"
                android:textSize="18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview_dinner_lunch"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginHorizontal="20dp" />

        <ImageView
            android:id="@+id/preview_image_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:adjustViewBounds="true"
            android:layout_marginHorizontal="5dp" />

        <Button
            android:id="@+id/take_picture_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_take_picture"
            android:textAllCaps="false"
            android:textColor="@color/textColorCustomButton"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dinner_lunch_finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_done"
            android:textAllCaps="false"
            android:textColor="@color/textColorCustomButton"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>